	* tools/mkconfigvar.sh: Fix make target (2014-4-23).
	* sched/exit.c, pthread_exit.c, task_exit.c, task_delete,c and
	  task_exithook.c:  For pthread_exit(), move some logic to an early
	  point in the exit sequence where the task may need to block.  Add
	  conditional logic in the lower end of the eixt logic kicked off by
	  _exit() to prohibit blocking after the task has been torn down and is
	  no longer cabable of blocking (2014-4-23).
	* arch/arm/src/common/up_initialize.c: Add missing registration
	  of /dev/zero.  Registration of /dev/null should depend upon
	  conditional compilation.  From Ken Pettit (2014-4-24).
	* arch/*/src/common/up_initialize.c:  Same change required to other
	  architectures (2014-4-24).
	* arch/arm/src/kl/kl_clockconfig.c and configs/freedom-kl25z/include/board.h:
	  Modify out PLL configuration so that it uses the values in
	  board.h;  Fix PLL settings in board.h so that the correct core
	  and bus clock frequencies are generated. (2014-4-24).
	* arm/src/kl/chip/kl_memorymap.h, kl_sim.h, andkl_uart.h:  Correct some
	  register definitions (2014-4-25).
	* arch/arm/src/kl/Kconfig, kl_lowputc.c, kl_serial.c, and kl_config.h:
	  No UART3-5 (2014-4-25).
	* arch/arm/src/kl/kl_serial.c:  Various fixes to various fils in the
	  KL architecture directory as need to get the interrupt-driven
	  serial driver to work.  The Freedom KL25Z NSH configuration now
	  works (2014-4-25).
	* include/nuttx/assert.h, arch/*/src/*/up_assert.c, and other file:
	  Remove up_assert_code().  While asserting with an encoded value
	  could be a good feature, the codes have not be well utilized nor
	  documented.  Give that situation it is better to remove the API
	  and reduce the footprint a little (2014-4-25).
	* drivers/serial/Kconfig and arch/*/src/*/*_serial.c:  Add
	  compilation so that the useless TIOCSERGSTRUCT ioctl logic
	  is not build unless CONFIG_DEBUG and CONFIG_SERIAL_TIOCSERGSTRUCT
	  are defined.